text alignment fixes

--- a/src/Components/Fact/index.css
+++ b/src/Components/Fact/index.css
@@ -24,8 +24,20 @@
     background-color: #f5ebe0;
     border-radius: 30px;
     border: 2px solid black;
+    margin-bottom: 50px;    
+}
+
+.fact-history > h3 {
+    margin-top: 18px;
+    margin-bottom: 0px;
+    font-size: 24px;
 }
 
 .fact-history > ul {
-    list-style: none
+    list-style: none;
+    width: 80%;
+}
+
+li {
+    margin-bottom: 8px;
 }
